<resources>
    <string name="app_name">young together</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading_jump">跳过</string>
    <string name="login">登录</string>
    <string name="edit_account">请输入用户名/邮箱</string>
    <string name="edit_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册账号</string>
    <string name="no_login">你还没有登录账号哦</string>
    <string name="login_now">现在登录</string>
    <string name="login_out">退出账号</string>
    <string name="only_login_out">仅退出账号</string>
    <string name="out_app">退出软件</string>
    <string name="accept_push">接收消息推送</string>
    <string name="clean_account">清除账号信息</string>
    <string name="account_manage">账号管理</string>
    <string name="account_self">账号与安全</string>
    <string name="default_setting">通用设置</string>
    <string name="check_update">检查更新</string>
    <string name="suggestion">意见反馈</string>
    <string name="clean_cache">清除缓存</string>
    <string name="clean_warning">清除缓存会导致下载的内容删除，是否确定?</string>
    <string name="delete_warning">确定删除此账号信息?</string>
    <string name="change_login_warning">确定切换登录为此账号?</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="add_account">添加账号</string>
    <string name="shop">积分商城</string>
    <string name="mine">我的</string>
    <string name="discuss">点评</string>
    <string name="activity">活动</string>
    <string name="teenager">青年之家</string>
    <string name="volunteer">志愿者活动</string>
    <string name="class_room">公益课堂</string>
    <string name="game">青春游戏</string>
    <string name="community">社区团建</string>
</resources>
