<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="200dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_18"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete_warning" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@color/gray"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/item_press_selecter"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_18"
                android:text="@string/sure" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.6dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/item_press_selecter"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_18"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>