<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clickable="true"
    android:focusable="true"
    android:onClick="doClick"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/jump_text"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="20dp"
                android:onClick="doClick"
                app:srcCompat="@drawable/cancel" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_weight="4.5"
        android:background="@color/login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/textSize_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/login_app_name_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_weight="4"
                android:background="@drawable/login_edit_shape"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="7">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/account" />

                <EditText
                    android:id="@+id/login_account_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/edit_account"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_weight="4"
                android:background="@drawable/login_edit_shape"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="7">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/password" />

                <EditText
                    android:id="@+id/login_password_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:onClick="doClick" />

                <com.example.youngtogether.layout.CheckedImageLayout
                    android:id="@+id/login_visible"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="doClick"
                    android:src="@drawable/login_visible_selecter"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_weight="4"
                android:background="@drawable/login_btn_selecter"
                android:onClick="doClick"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/login_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="doClick"
                        android:text="@string/forget_password"
                        android:textColor="@drawable/text_press_selecter" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="right"
                        android:onClick="doClick"
                        android:text="@string/register"
                        android:textColor="@drawable/text_press_selecter" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="登录即代表阅读和同意"
                    android:textColor="@color/text_blue" />

                <TextView
                    android:id="@+id/service_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="doClick"
                    android:text="服务协议"
                    android:textColor="@drawable/text_press_selecter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="与"
                    android:textColor="@color/text_blue" />

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="doClick"
                    android:text="隐私政策"
                    android:textColor="@drawable/text_press_selecter" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>